# python-bopomofo2hangul

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  pytest.yml
pybopomofo2hangul/: __init__.py  bopomofo2hangul.py
tests/: test_bopomofo2hangul.py
