[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pybopomofo2hangul"
description = "ㄅㄆㄇㄈ音轉韓字"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*, <4"
license = {text = "MIT"}
keywords = ["bopomofo", "hangul"]
dependencies = [
    "pypinyin",
]
